force-app/main/default/objects/Controle_de_Triggers__c/Controle_de_Triggers__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controle de triggers para facilitar controle de acesso e configuração.</description>
    <label>Controle de Triggers</label>
</CustomObject>