force-app/main/default/objects/Controle_de_Triggers__c/fields/Request_Vendor_Vetting_RecId__c.field-meta.xml
<CustomField>
    <fullName>Request_Vendor_Vetting_RecId__c</fullName>
    <label>Request Vendor Vetting RecId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>