force-app/main/default/objects/Controle_de_Triggers__c/fields/Trigger_Account__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Account</label>
    <type>Checkbox</type>
</CustomField>