force-app/main/default/objects/Controle_de_Triggers__c/fields/Trigger_BMItem__c.field-meta.xml
<CustomField>
    <fullName>Trigger_BMItem__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Trigger_BMItem</label>
    <type>Checkbox</type>
</CustomField>