force-app/main/default/objects/Controle_de_Triggers__c/fields/Trigger_Inspection_Item__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Inspection_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trigger Inspection Item</label>
    <type>Checkbox</type>
</CustomField>