force-app/main/default/objects/Controle_de_Triggers__c/fields/Trigger_Request__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Request__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Trigger_Request</label>
    <type>Checkbox</type>
</CustomField>