force-app/main/default/objects/Controle_de_Triggers__c/fields/Trigger_Step__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Step__c</fullName>
    <defaultValue>false</defaultValue>
    <description>boolean field  to determine if the trigger should fire or not.</description>
    <label>Trigger Step</label>
    <type>Checkbox</type>
</CustomField>