force-app/main/default/objects/Controle_de_Triggers__c/fields/Triscal_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Triscal_User_Id__c</fullName>
    <description>User Id, for Triscal support.</description>
    <label>Triscal User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>