force-app/main/default/objects/Controle_de_Triggers__c/fields/TW2_Inspection_Advance_Hours_Schedule__c.field-meta.xml
<CustomField>
    <fullName>TW2_Inspection_Advance_Hours_Schedule__c</fullName>
    <description>Number field in hours, to control the date available for next inspection</description>
    <label>Inspection Advance Hours Schedule</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>