force-app/main/default/objects/Controle_de_Triggers__c/fields/TW2_Inspection_Daily_Hour_Break__c.field-meta.xml
<CustomField>
    <fullName>TW2_Inspection_Daily_Hour_Break__c</fullName>
    <description>Number field to determine a 24 hour clock. Used to determine if today should count as an available date,</description>
    <label>Inspection Daily Hour Break</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>